Fixed overlap active styling for close animation

--- a/client/views/css/DoritoMenu.less
+++ b/client/views/css/DoritoMenu.less
@@ -13,7 +13,7 @@ body {
     background: url(../img/background.jpg) no-repeat center center;
 }
 
-body[data-menu=gameservers] .overlay {
+.overlay[data-id=gameservers]  {
     width: 76vw;
     height: 80vh;
     top: 10vh;
